--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tiptap/extension-link": "^2.0.3",
     "@tiptap/react": "^2.0.3",
     "@tiptap/starter-kit": "^2.0.3",
+    "axios": "^1.4.0",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.8",
     "react": "^18.2.0",
